my_app/logic/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ABSTRACT
    ADD
    ARROBA
    AS
    BASE
    BOOL_LITERAL
    BYTE
    CASE
    CATCH
    CHECKED
    CLASS
    CONST
    CONTINUE
    DECIMAL
    DECREMENTO
    DEFAULT
    DELEGATE
    DIVIDIRIGUAL
    DO
    DOUBLE
    DYNAMIC
    ELSE
    ENUM
    EVENT
    EXTERN
    FINALLY
    FIXED
    FLECHALAMBDA
    FOREACH
    FORMAT
    GENERICO_INVALIDO
    GET
    GOTO
    ID_INVALIDO
    IMPORT
    IN
    INCREMENTO
    INTERFACE
    INTERNAL
    IS
    LOCK
    LONG
    MASIGUAL
    MENOSIGUAL
    MODULO
    NAMESPACE
    NEWLINE
    NULL
    OBJECT
    OPERATOR
    OUT
    OVERRIDE
    PARAMS
    PARTIAL
    PORIGUAL
    PRIVATE
    PROTECTED
    PUBLIC
    READONLY
    REF
    REMOVE
    SBYTE
    SEALED
    SET
    SHORT
    SIZEOF
    STACKALLOC
    STATIC
    STRUCT
    SWITCH
    THIS
    THROW
    TRY
    TYPEOF
    UINT
    ULONG
    UNCHECKED
    UNSAFE
    USHORT
    USING
    VAR
    VIRTUAL
    VOLATILE
    YIELD

Grammar

Rule 0     S' -> programa
Rule 1     programa -> lista_sentencias
Rule 2     lista_sentencias -> lista_sentencias sentencia
Rule 3     lista_sentencias -> empty
Rule 4     sentencia -> declaracion SENTENCIAFIN
Rule 5     sentencia -> asignacion_elemento SENTENCIAFIN
Rule 6     sentencia -> if_statement
Rule 7     sentencia -> while_loop
Rule 8     sentencia -> for_loop
Rule 9     sentencia -> impresion SENTENCIAFIN
Rule 10    sentencia -> instruccion_return SENTENCIAFIN
Rule 11    sentencia -> instruccion_break SENTENCIAFIN
Rule 12    declaracion -> tipo_dato IDENTIFICADOR ASIGNAR expresion
Rule 13    declaracion -> tipo_array IDENTIFICADOR ASIGNAR expresion_array
Rule 14    declaracion -> IDENTIFICADOR ASIGNAR expresion
Rule 15    asignacion_elemento -> IDENTIFICADOR ICORCH expresion DCORCH ASIGNAR expresion
Rule 16    tipo_dato -> tipo_retorno
Rule 17    tipo_dato -> tipo_lista
Rule 18    tipo_dato -> tipo_diccionario
Rule 19    tipo_retorno -> INT
Rule 20    tipo_retorno -> FLOAT
Rule 21    tipo_retorno -> STRING
Rule 22    tipo_retorno -> BOOL
Rule 23    tipo_retorno -> VOID
Rule 24    tipo_retorno -> CHAR
Rule 25    tipo_lista -> LISTA MENOR tipo_retorno MAYOR
Rule 26    tipo_diccionario -> DICTIONARY MENOR tipo_retorno COMA tipo_retorno MAYOR
Rule 27    tipo_array -> ARRAY_TYPE
Rule 28    expresion -> expresion_aritmetica
Rule 29    expresion -> expresion_logica
Rule 30    expresion -> valor_literal
Rule 31    expresion -> IDENTIFICADOR
Rule 32    expresion -> expresion_lista
Rule 33    expresion -> expresion_diccionario
Rule 34    expresion -> expresion_array
Rule 35    expresion_aritmetica -> expresion MAS expresion
Rule 36    expresion_aritmetica -> expresion MENOS expresion
Rule 37    expresion_aritmetica -> expresion POR expresion
Rule 38    expresion_aritmetica -> expresion DIVIDIR expresion
Rule 39    expresion_aritmetica -> MENOS expresion
Rule 40    expresion_logica -> expresion MAYOR expresion
Rule 41    expresion_logica -> expresion MENOR expresion
Rule 42    expresion_logica -> expresion MAYORIGUAL expresion
Rule 43    expresion_logica -> expresion MENORIGUAL expresion
Rule 44    expresion_logica -> expresion IGUAL expresion
Rule 45    expresion_logica -> expresion DIFERENTE expresion
Rule 46    expresion_logica -> expresion AND expresion
Rule 47    expresion_logica -> expresion OR expresion
Rule 48    expresion_logica -> NOT expresion
Rule 49    expresion -> IPAREN expresion DPAREN
Rule 50    valor_literal -> INT_LITERAL
Rule 51    valor_literal -> FLOAT_LITERAL
Rule 52    valor_literal -> STRING_LITERAL
Rule 53    valor_literal -> CHAR_LITERAL
Rule 54    valor_literal -> TRUE
Rule 55    valor_literal -> FALSE
Rule 56    expresion_lista -> NEW tipo_lista IPAREN DPAREN
Rule 57    expresion_diccionario -> NEW tipo_diccionario IPAREN DPAREN
Rule 58    expresion_array -> ARRAY_CREATION
Rule 59    expresion_array -> ILLAVE lista_elementos_array DLLAVE
Rule 60    lista_elementos_array -> expresion COMA lista_elementos_array
Rule 61    lista_elementos_array -> expresion
Rule 62    if_statement -> IF IPAREN expresion DPAREN bloque_codigo
Rule 63    while_loop -> WHILE IPAREN expresion DPAREN enter_loop_scope bloque_codigo
Rule 64    for_loop -> FOR IPAREN declaracion SENTENCIAFIN expresion SENTENCIAFIN expresion DPAREN enter_loop_scope bloque_codigo
Rule 65    enter_loop_scope -> <empty>
Rule 66    bloque_codigo -> ILLAVE lista_sentencias DLLAVE
Rule 67    impresion -> CONSOLE PUNTO WRITELINE IPAREN expresion DPAREN
Rule 68    instruccion_return -> RETURN expresion
Rule 69    instruccion_break -> BREAK
Rule 70    empty -> <empty>

Terminals, with rules where they appear

ABSTRACT             : 
ADD                  : 
AND                  : 46
ARRAY_CREATION       : 58
ARRAY_TYPE           : 27
ARROBA               : 
AS                   : 
ASIGNAR              : 12 13 14 15
BASE                 : 
BOOL                 : 22
BOOL_LITERAL         : 
BREAK                : 69
BYTE                 : 
CASE                 : 
CATCH                : 
CHAR                 : 24
CHAR_LITERAL         : 53
CHECKED              : 
CLASS                : 
COMA                 : 26 60
CONSOLE              : 67
CONST                : 
CONTINUE             : 
DCORCH               : 15
DECIMAL              : 
DECREMENTO           : 
DEFAULT              : 
DELEGATE             : 
DICTIONARY           : 26
DIFERENTE            : 45
DIVIDIR              : 38
DIVIDIRIGUAL         : 
DLLAVE               : 59 66
DO                   : 
DOUBLE               : 
DPAREN               : 49 56 57 62 63 64 67
DYNAMIC              : 
ELSE                 : 
ENUM                 : 
EVENT                : 
EXTERN               : 
FALSE                : 55
FINALLY              : 
FIXED                : 
FLECHALAMBDA         : 
FLOAT                : 20
FLOAT_LITERAL        : 51
FOR                  : 64
FOREACH              : 
FORMAT               : 
GENERICO_INVALIDO    : 
GET                  : 
GOTO                 : 
ICORCH               : 15
IDENTIFICADOR        : 12 13 14 15 31
ID_INVALIDO          : 
IF                   : 62
IGUAL                : 44
ILLAVE               : 59 66
IMPORT               : 
IN                   : 
INCREMENTO           : 
INT                  : 19
INTERFACE            : 
INTERNAL             : 
INT_LITERAL          : 50
IPAREN               : 49 56 57 62 63 64 67
IS                   : 
LISTA                : 25
LOCK                 : 
LONG                 : 
MAS                  : 35
MASIGUAL             : 
MAYOR                : 25 26 40
MAYORIGUAL           : 42
MENOR                : 25 26 41
MENORIGUAL           : 43
MENOS                : 36 39
MENOSIGUAL           : 
MODULO               : 
NAMESPACE            : 
NEW                  : 56 57
NEWLINE              : 
NOT                  : 48
NULL                 : 
OBJECT               : 
OPERATOR             : 
OR                   : 47
OUT                  : 
OVERRIDE             : 
PARAMS               : 
PARTIAL              : 
POR                  : 37
PORIGUAL             : 
PRIVATE              : 
PROTECTED            : 
PUBLIC               : 
PUNTO                : 67
READONLY             : 
REF                  : 
REMOVE               : 
RETURN               : 68
SBYTE                : 
SEALED               : 
SENTENCIAFIN         : 4 5 9 10 11 64 64
SET                  : 
SHORT                : 
SIZEOF               : 
STACKALLOC           : 
STATIC               : 
STRING               : 21
STRING_LITERAL       : 52
STRUCT               : 
SWITCH               : 
THIS                 : 
THROW                : 
TRUE                 : 54
TRY                  : 
TYPEOF               : 
UINT                 : 
ULONG                : 
UNCHECKED            : 
UNSAFE               : 
USHORT               : 
USING                : 
VAR                  : 
VIRTUAL              : 
VOID                 : 23
VOLATILE             : 
WHILE                : 63
WRITELINE            : 67
YIELD                : 
error                : 

Nonterminals, with rules where they appear

asignacion_elemento  : 5
bloque_codigo        : 62 63 64
declaracion          : 4 64
empty                : 3
enter_loop_scope     : 63 64
expresion            : 12 14 15 15 35 35 36 36 37 37 38 38 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 49 60 61 62 63 64 64 67 68
expresion_aritmetica : 28
expresion_array      : 13 34
expresion_diccionario : 33
expresion_lista      : 32
expresion_logica     : 29
for_loop             : 8
if_statement         : 6
impresion            : 9
instruccion_break    : 11
instruccion_return   : 10
lista_elementos_array : 59 60
lista_sentencias     : 1 2 66
programa             : 0
sentencia            : 2
tipo_array           : 13
tipo_dato            : 12
tipo_diccionario     : 18 57
tipo_lista           : 17 56
tipo_retorno         : 16 25 26 26
valor_literal        : 30
while_loop           : 7

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . lista_sentencias
    (2) lista_sentencias -> . lista_sentencias sentencia
    (3) lista_sentencias -> . empty
    (70) empty -> .

    IDENTIFICADOR   reduce using rule 70 (empty -> .)
    IF              reduce using rule 70 (empty -> .)
    WHILE           reduce using rule 70 (empty -> .)
    FOR             reduce using rule 70 (empty -> .)
    CONSOLE         reduce using rule 70 (empty -> .)
    RETURN          reduce using rule 70 (empty -> .)
    BREAK           reduce using rule 70 (empty -> .)
    ARRAY_TYPE      reduce using rule 70 (empty -> .)
    INT             reduce using rule 70 (empty -> .)
    FLOAT           reduce using rule 70 (empty -> .)
    STRING          reduce using rule 70 (empty -> .)
    BOOL            reduce using rule 70 (empty -> .)
    VOID            reduce using rule 70 (empty -> .)
    CHAR            reduce using rule 70 (empty -> .)
    LISTA           reduce using rule 70 (empty -> .)
    DICTIONARY      reduce using rule 70 (empty -> .)
    $end            reduce using rule 70 (empty -> .)

    programa                       shift and go to state 1
    lista_sentencias               shift and go to state 2
    empty                          shift and go to state 3

state 1

    (0) S' -> programa .



state 2

    (1) programa -> lista_sentencias .
    (2) lista_sentencias -> lista_sentencias . sentencia
    (4) sentencia -> . declaracion SENTENCIAFIN
    (5) sentencia -> . asignacion_elemento SENTENCIAFIN
    (6) sentencia -> . if_statement
    (7) sentencia -> . while_loop
    (8) sentencia -> . for_loop
    (9) sentencia -> . impresion SENTENCIAFIN
    (10) sentencia -> . instruccion_return SENTENCIAFIN
    (11) sentencia -> . instruccion_break SENTENCIAFIN
    (12) declaracion -> . tipo_dato IDENTIFICADOR ASIGNAR expresion
    (13) declaracion -> . tipo_array IDENTIFICADOR ASIGNAR expresion_array
    (14) declaracion -> . IDENTIFICADOR ASIGNAR expresion
    (15) asignacion_elemento -> . IDENTIFICADOR ICORCH expresion DCORCH ASIGNAR expresion
    (62) if_statement -> . IF IPAREN expresion DPAREN bloque_codigo
    (63) while_loop -> . WHILE IPAREN expresion DPAREN enter_loop_scope bloque_codigo
    (64) for_loop -> . FOR IPAREN declaracion SENTENCIAFIN expresion SENTENCIAFIN expresion DPAREN enter_loop_scope bloque_codigo
    (67) impresion -> . CONSOLE PUNTO WRITELINE IPAREN expresion DPAREN
    (68) instruccion_return -> . RETURN expresion
    (69) instruccion_break -> . BREAK
    (16) tipo_dato -> . tipo_retorno
    (17) tipo_dato -> . tipo_lista
    (18) tipo_dato -> . tipo_diccionario
    (27) tipo_array -> . ARRAY_TYPE
    (19) tipo_retorno -> . INT
    (20) tipo_retorno -> . FLOAT
    (21) tipo_retorno -> . STRING
    (22) tipo_retorno -> . BOOL
    (23) tipo_retorno -> . VOID
    (24) tipo_retorno -> . CHAR
    (25) tipo_lista -> . LISTA MENOR tipo_retorno MAYOR
    (26) tipo_diccionario -> . DICTIONARY MENOR tipo_retorno COMA tipo_retorno MAYOR

    $end            reduce using rule 1 (programa -> lista_sentencias .)
    IDENTIFICADOR   shift and go to state 14
    IF              shift and go to state 16
    WHILE           shift and go to state 17
    FOR             shift and go to state 18
    CONSOLE         shift and go to state 19
    RETURN          shift and go to state 20
    BREAK           shift and go to state 21
    ARRAY_TYPE      shift and go to state 25
    INT             shift and go to state 26
    FLOAT           shift and go to state 27
    STRING          shift and go to state 28
    BOOL            shift and go to state 29
    VOID            shift and go to state 30
    CHAR            shift and go to state 31
    LISTA           shift and go to state 32
    DICTIONARY      shift and go to state 33

    sentencia                      shift and go to state 4
    declaracion                    shift and go to state 5
    asignacion_elemento            shift and go to state 6
    if_statement                   shift and go to state 7
    while_loop                     shift and go to state 8
    for_loop                       shift and go to state 9
    impresion                      shift and go to state 10
    instruccion_return             shift and go to state 11
    instruccion_break              shift and go to state 12
    tipo_dato                      shift and go to state 13
    tipo_array                     shift and go to state 15
    tipo_retorno                   shift and go to state 22
    tipo_lista                     shift and go to state 23
    tipo_diccionario               shift and go to state 24

state 3

    (3) lista_sentencias -> empty .

    IDENTIFICADOR   reduce using rule 3 (lista_sentencias -> empty .)
    IF              reduce using rule 3 (lista_sentencias -> empty .)
    WHILE           reduce using rule 3 (lista_sentencias -> empty .)
    FOR             reduce using rule 3 (lista_sentencias -> empty .)
    CONSOLE         reduce using rule 3 (lista_sentencias -> empty .)
    RETURN          reduce using rule 3 (lista_sentencias -> empty .)
    BREAK           reduce using rule 3 (lista_sentencias -> empty .)
    ARRAY_TYPE      reduce using rule 3 (lista_sentencias -> empty .)
    INT             reduce using rule 3 (lista_sentencias -> empty .)
    FLOAT           reduce using rule 3 (lista_sentencias -> empty .)
    STRING          reduce using rule 3 (lista_sentencias -> empty .)
    BOOL            reduce using rule 3 (lista_sentencias -> empty .)
    VOID            reduce using rule 3 (lista_sentencias -> empty .)
    CHAR            reduce using rule 3 (lista_sentencias -> empty .)
    LISTA           reduce using rule 3 (lista_sentencias -> empty .)
    DICTIONARY      reduce using rule 3 (lista_sentencias -> empty .)
    $end            reduce using rule 3 (lista_sentencias -> empty .)
    DLLAVE          reduce using rule 3 (lista_sentencias -> empty .)


state 4

    (2) lista_sentencias -> lista_sentencias sentencia .

    IDENTIFICADOR   reduce using rule 2 (lista_sentencias -> lista_sentencias sentencia .)
    IF              reduce using rule 2 (lista_sentencias -> lista_sentencias sentencia .)
    WHILE           reduce using rule 2 (lista_sentencias -> lista_sentencias sentencia .)
    FOR             reduce using rule 2 (lista_sentencias -> lista_sentencias sentencia .)
    CONSOLE         reduce using rule 2 (lista_sentencias -> lista_sentencias sentencia .)
    RETURN          reduce using rule 2 (lista_sentencias -> lista_sentencias sentencia .)
    BREAK           reduce using rule 2 (lista_sentencias -> lista_sentencias sentencia .)
    ARRAY_TYPE      reduce using rule 2 (lista_sentencias -> lista_sentencias sentencia .)
    INT             reduce using rule 2 (lista_sentencias -> lista_sentencias sentencia .)
    FLOAT           reduce using rule 2 (lista_sentencias -> lista_sentencias sentencia .)
    STRING          reduce using rule 2 (lista_sentencias -> lista_sentencias sentencia .)
    BOOL            reduce using rule 2 (lista_sentencias -> lista_sentencias sentencia .)
    VOID            reduce using rule 2 (lista_sentencias -> lista_sentencias sentencia .)
    CHAR            reduce using rule 2 (lista_sentencias -> lista_sentencias sentencia .)
    LISTA           reduce using rule 2 (lista_sentencias -> lista_sentencias sentencia .)
    DICTIONARY      reduce using rule 2 (lista_sentencias -> lista_sentencias sentencia .)
    $end            reduce using rule 2 (lista_sentencias -> lista_sentencias sentencia .)
    DLLAVE          reduce using rule 2 (lista_sentencias -> lista_sentencias sentencia .)


state 5

    (4) sentencia -> declaracion . SENTENCIAFIN

    SENTENCIAFIN    shift and go to state 34


state 6

    (5) sentencia -> asignacion_elemento . SENTENCIAFIN

    SENTENCIAFIN    shift and go to state 35


state 7

    (6) sentencia -> if_statement .

    IDENTIFICADOR   reduce using rule 6 (sentencia -> if_statement .)
    IF              reduce using rule 6 (sentencia -> if_statement .)
    WHILE           reduce using rule 6 (sentencia -> if_statement .)
    FOR             reduce using rule 6 (sentencia -> if_statement .)
    CONSOLE         reduce using rule 6 (sentencia -> if_statement .)
    RETURN          reduce using rule 6 (sentencia -> if_statement .)
    BREAK           reduce using rule 6 (sentencia -> if_statement .)
    ARRAY_TYPE      reduce using rule 6 (sentencia -> if_statement .)
    INT             reduce using rule 6 (sentencia -> if_statement .)
    FLOAT           reduce using rule 6 (sentencia -> if_statement .)
    STRING          reduce using rule 6 (sentencia -> if_statement .)
    BOOL            reduce using rule 6 (sentencia -> if_statement .)
    VOID            reduce using rule 6 (sentencia -> if_statement .)
    CHAR            reduce using rule 6 (sentencia -> if_statement .)
    LISTA           reduce using rule 6 (sentencia -> if_statement .)
    DICTIONARY      reduce using rule 6 (sentencia -> if_statement .)
    $end            reduce using rule 6 (sentencia -> if_statement .)
    DLLAVE          reduce using rule 6 (sentencia -> if_statement .)


state 8

    (7) sentencia -> while_loop .

    IDENTIFICADOR   reduce using rule 7 (sentencia -> while_loop .)
    IF              reduce using rule 7 (sentencia -> while_loop .)
    WHILE           reduce using rule 7 (sentencia -> while_loop .)
    FOR             reduce using rule 7 (sentencia -> while_loop .)
    CONSOLE         reduce using rule 7 (sentencia -> while_loop .)
    RETURN          reduce using rule 7 (sentencia -> while_loop .)
    BREAK           reduce using rule 7 (sentencia -> while_loop .)
    ARRAY_TYPE      reduce using rule 7 (sentencia -> while_loop .)
    INT             reduce using rule 7 (sentencia -> while_loop .)
    FLOAT           reduce using rule 7 (sentencia -> while_loop .)
    STRING          reduce using rule 7 (sentencia -> while_loop .)
    BOOL            reduce using rule 7 (sentencia -> while_loop .)
    VOID            reduce using rule 7 (sentencia -> while_loop .)
    CHAR            reduce using rule 7 (sentencia -> while_loop .)
    LISTA           reduce using rule 7 (sentencia -> while_loop .)
    DICTIONARY      reduce using rule 7 (sentencia -> while_loop .)
    $end            reduce using rule 7 (sentencia -> while_loop .)
    DLLAVE          reduce using rule 7 (sentencia -> while_loop .)


state 9

    (8) sentencia -> for_loop .

    IDENTIFICADOR   reduce using rule 8 (sentencia -> for_loop .)
    IF              reduce using rule 8 (sentencia -> for_loop .)
    WHILE           reduce using rule 8 (sentencia -> for_loop .)
    FOR             reduce using rule 8 (sentencia -> for_loop .)
    CONSOLE         reduce using rule 8 (sentencia -> for_loop .)
    RETURN          reduce using rule 8 (sentencia -> for_loop .)
    BREAK           reduce using rule 8 (sentencia -> for_loop .)
    ARRAY_TYPE      reduce using rule 8 (sentencia -> for_loop .)
    INT             reduce using rule 8 (sentencia -> for_loop .)
    FLOAT           reduce using rule 8 (sentencia -> for_loop .)
    STRING          reduce using rule 8 (sentencia -> for_loop .)
    BOOL            reduce using rule 8 (sentencia -> for_loop .)
    VOID            reduce using rule 8 (sentencia -> for_loop .)
    CHAR            reduce using rule 8 (sentencia -> for_loop .)
    LISTA           reduce using rule 8 (sentencia -> for_loop .)
    DICTIONARY      reduce using rule 8 (sentencia -> for_loop .)
    $end            reduce using rule 8 (sentencia -> for_loop .)
    DLLAVE          reduce using rule 8 (sentencia -> for_loop .)


state 10

    (9) sentencia -> impresion . SENTENCIAFIN

    SENTENCIAFIN    shift and go to state 36


state 11

    (10) sentencia -> instruccion_return . SENTENCIAFIN

    SENTENCIAFIN    shift and go to state 37


state 12

    (11) sentencia -> instruccion_break . SENTENCIAFIN

    SENTENCIAFIN    shift and go to state 38


state 13

    (12) declaracion -> tipo_dato . IDENTIFICADOR ASIGNAR expresion

    IDENTIFICADOR   shift and go to state 39


state 14

    (14) declaracion -> IDENTIFICADOR . ASIGNAR expresion
    (15) asignacion_elemento -> IDENTIFICADOR . ICORCH expresion DCORCH ASIGNAR expresion

    ASIGNAR         shift and go to state 40
    ICORCH          shift and go to state 41


state 15

    (13) declaracion -> tipo_array . IDENTIFICADOR ASIGNAR expresion_array

    IDENTIFICADOR   shift and go to state 42


state 16

    (62) if_statement -> IF . IPAREN expresion DPAREN bloque_codigo

    IPAREN          shift and go to state 43


state 17

    (63) while_loop -> WHILE . IPAREN expresion DPAREN enter_loop_scope bloque_codigo

    IPAREN          shift and go to state 44


state 18

    (64) for_loop -> FOR . IPAREN declaracion SENTENCIAFIN expresion SENTENCIAFIN expresion DPAREN enter_loop_scope bloque_codigo

    IPAREN          shift and go to state 45


state 19

    (67) impresion -> CONSOLE . PUNTO WRITELINE IPAREN expresion DPAREN

    PUNTO           shift and go to state 46


state 20

    (68) instruccion_return -> RETURN . expresion
    (28) expresion -> . expresion_aritmetica
    (29) expresion -> . expresion_logica
    (30) expresion -> . valor_literal
    (31) expresion -> . IDENTIFICADOR
    (32) expresion -> . expresion_lista
    (33) expresion -> . expresion_diccionario
    (34) expresion -> . expresion_array
    (49) expresion -> . IPAREN expresion DPAREN
    (35) expresion_aritmetica -> . expresion MAS expresion
    (36) expresion_aritmetica -> . expresion MENOS expresion
    (37) expresion_aritmetica -> . expresion POR expresion
    (38) expresion_aritmetica -> . expresion DIVIDIR expresion
    (39) expresion_aritmetica -> . MENOS expresion
    (40) expresion_logica -> . expresion MAYOR expresion
    (41) expresion_logica -> . expresion MENOR expresion
    (42) expresion_logica -> . expresion MAYORIGUAL expresion
    (43) expresion_logica -> . expresion MENORIGUAL expresion
    (44) expresion_logica -> . expresion IGUAL expresion
    (45) expresion_logica -> . expresion DIFERENTE expresion
    (46) expresion_logica -> . expresion AND expresion
    (47) expresion_logica -> . expresion OR expresion
    (48) expresion_logica -> . NOT expresion
    (50) valor_literal -> . INT_LITERAL
    (51) valor_literal -> . FLOAT_LITERAL
    (52) valor_literal -> . STRING_LITERAL
    (53) valor_literal -> . CHAR_LITERAL
    (54) valor_literal -> . TRUE
    (55) valor_literal -> . FALSE
    (56) expresion_lista -> . NEW tipo_lista IPAREN DPAREN
    (57) expresion_diccionario -> . NEW tipo_diccionario IPAREN DPAREN
    (58) expresion_array -> . ARRAY_CREATION
    (59) expresion_array -> . ILLAVE lista_elementos_array DLLAVE

    IDENTIFICADOR   shift and go to state 51
    IPAREN          shift and go to state 55
    MENOS           shift and go to state 56
    NOT             shift and go to state 57
    INT_LITERAL     shift and go to state 58
    FLOAT_LITERAL   shift and go to state 59
    STRING_LITERAL  shift and go to state 60
    CHAR_LITERAL    shift and go to state 61
    TRUE            shift and go to state 62
    FALSE           shift and go to state 63
    NEW             shift and go to state 64
    ARRAY_CREATION  shift and go to state 65
    ILLAVE          shift and go to state 66

    expresion                      shift and go to state 47
    expresion_aritmetica           shift and go to state 48
    expresion_logica               shift and go to state 49
    valor_literal                  shift and go to state 50
    expresion_lista                shift and go to state 52
    expresion_diccionario          shift and go to state 53
    expresion_array                shift and go to state 54

state 21

    (69) instruccion_break -> BREAK .

    SENTENCIAFIN    reduce using rule 69 (instruccion_break -> BREAK .)


state 22

    (16) tipo_dato -> tipo_retorno .

    IDENTIFICADOR   reduce using rule 16 (tipo_dato -> tipo_retorno .)


state 23

    (17) tipo_dato -> tipo_lista .

    IDENTIFICADOR   reduce using rule 17 (tipo_dato -> tipo_lista .)


state 24

    (18) tipo_dato -> tipo_diccionario .

    IDENTIFICADOR   reduce using rule 18 (tipo_dato -> tipo_diccionario .)


state 25

    (27) tipo_array -> ARRAY_TYPE .

    IDENTIFICADOR   reduce using rule 27 (tipo_array -> ARRAY_TYPE .)


state 26

    (19) tipo_retorno -> INT .

    IDENTIFICADOR   reduce using rule 19 (tipo_retorno -> INT .)
    MAYOR           reduce using rule 19 (tipo_retorno -> INT .)
    COMA            reduce using rule 19 (tipo_retorno -> INT .)


state 27

    (20) tipo_retorno -> FLOAT .

    IDENTIFICADOR   reduce using rule 20 (tipo_retorno -> FLOAT .)
    MAYOR           reduce using rule 20 (tipo_retorno -> FLOAT .)
    COMA            reduce using rule 20 (tipo_retorno -> FLOAT .)


state 28

    (21) tipo_retorno -> STRING .

    IDENTIFICADOR   reduce using rule 21 (tipo_retorno -> STRING .)
    MAYOR           reduce using rule 21 (tipo_retorno -> STRING .)
    COMA            reduce using rule 21 (tipo_retorno -> STRING .)


state 29

    (22) tipo_retorno -> BOOL .

    IDENTIFICADOR   reduce using rule 22 (tipo_retorno -> BOOL .)
    MAYOR           reduce using rule 22 (tipo_retorno -> BOOL .)
    COMA            reduce using rule 22 (tipo_retorno -> BOOL .)


state 30

    (23) tipo_retorno -> VOID .

    IDENTIFICADOR   reduce using rule 23 (tipo_retorno -> VOID .)
    MAYOR           reduce using rule 23 (tipo_retorno -> VOID .)
    COMA            reduce using rule 23 (tipo_retorno -> VOID .)


state 31

    (24) tipo_retorno -> CHAR .

    IDENTIFICADOR   reduce using rule 24 (tipo_retorno -> CHAR .)
    MAYOR           reduce using rule 24 (tipo_retorno -> CHAR .)
    COMA            reduce using rule 24 (tipo_retorno -> CHAR .)


state 32

    (25) tipo_lista -> LISTA . MENOR tipo_retorno MAYOR

    MENOR           shift and go to state 67


state 33

    (26) tipo_diccionario -> DICTIONARY . MENOR tipo_retorno COMA tipo_retorno MAYOR

    MENOR           shift and go to state 68


state 34

    (4) sentencia -> declaracion SENTENCIAFIN .

    IDENTIFICADOR   reduce using rule 4 (sentencia -> declaracion SENTENCIAFIN .)
    IF              reduce using rule 4 (sentencia -> declaracion SENTENCIAFIN .)
    WHILE           reduce using rule 4 (sentencia -> declaracion SENTENCIAFIN .)
    FOR             reduce using rule 4 (sentencia -> declaracion SENTENCIAFIN .)
    CONSOLE         reduce using rule 4 (sentencia -> declaracion SENTENCIAFIN .)
    RETURN          reduce using rule 4 (sentencia -> declaracion SENTENCIAFIN .)
    BREAK           reduce using rule 4 (sentencia -> declaracion SENTENCIAFIN .)
    ARRAY_TYPE      reduce using rule 4 (sentencia -> declaracion SENTENCIAFIN .)
    INT             reduce using rule 4 (sentencia -> declaracion SENTENCIAFIN .)
    FLOAT           reduce using rule 4 (sentencia -> declaracion SENTENCIAFIN .)
    STRING          reduce using rule 4 (sentencia -> declaracion SENTENCIAFIN .)
    BOOL            reduce using rule 4 (sentencia -> declaracion SENTENCIAFIN .)
    VOID            reduce using rule 4 (sentencia -> declaracion SENTENCIAFIN .)
    CHAR            reduce using rule 4 (sentencia -> declaracion SENTENCIAFIN .)
    LISTA           reduce using rule 4 (sentencia -> declaracion SENTENCIAFIN .)
    DICTIONARY      reduce using rule 4 (sentencia -> declaracion SENTENCIAFIN .)
    $end            reduce using rule 4 (sentencia -> declaracion SENTENCIAFIN .)
    DLLAVE          reduce using rule 4 (sentencia -> declaracion SENTENCIAFIN .)


state 35

    (5) sentencia -> asignacion_elemento SENTENCIAFIN .

    IDENTIFICADOR   reduce using rule 5 (sentencia -> asignacion_elemento SENTENCIAFIN .)
    IF              reduce using rule 5 (sentencia -> asignacion_elemento SENTENCIAFIN .)
    WHILE           reduce using rule 5 (sentencia -> asignacion_elemento SENTENCIAFIN .)
    FOR             reduce using rule 5 (sentencia -> asignacion_elemento SENTENCIAFIN .)
    CONSOLE         reduce using rule 5 (sentencia -> asignacion_elemento SENTENCIAFIN .)
    RETURN          reduce using rule 5 (sentencia -> asignacion_elemento SENTENCIAFIN .)
    BREAK           reduce using rule 5 (sentencia -> asignacion_elemento SENTENCIAFIN .)
    ARRAY_TYPE      reduce using rule 5 (sentencia -> asignacion_elemento SENTENCIAFIN .)
    INT             reduce using rule 5 (sentencia -> asignacion_elemento SENTENCIAFIN .)
    FLOAT           reduce using rule 5 (sentencia -> asignacion_elemento SENTENCIAFIN .)
    STRING          reduce using rule 5 (sentencia -> asignacion_elemento SENTENCIAFIN .)
    BOOL            reduce using rule 5 (sentencia -> asignacion_elemento SENTENCIAFIN .)
    VOID            reduce using rule 5 (sentencia -> asignacion_elemento SENTENCIAFIN .)
    CHAR            reduce using rule 5 (sentencia -> asignacion_elemento SENTENCIAFIN .)
    LISTA           reduce using rule 5 (sentencia -> asignacion_elemento SENTENCIAFIN .)
    DICTIONARY      reduce using rule 5 (sentencia -> asignacion_elemento SENTENCIAFIN .)
    $end            reduce using rule 5 (sentencia -> asignacion_elemento SENTENCIAFIN .)
    DLLAVE          reduce using rule 5 (sentencia -> asignacion_elemento SENTENCIAFIN .)


state 36

    (9) sentencia -> impresion SENTENCIAFIN .

    IDENTIFICADOR   reduce using rule 9 (sentencia -> impresion SENTENCIAFIN .)
    IF              reduce using rule 9 (sentencia -> impresion SENTENCIAFIN .)
    WHILE           reduce using rule 9 (sentencia -> impresion SENTENCIAFIN .)
    FOR             reduce using rule 9 (sentencia -> impresion SENTENCIAFIN .)
    CONSOLE         reduce using rule 9 (sentencia -> impresion SENTENCIAFIN .)
    RETURN          reduce using rule 9 (sentencia -> impresion SENTENCIAFIN .)
    BREAK           reduce using rule 9 (sentencia -> impresion SENTENCIAFIN .)
    ARRAY_TYPE      reduce using rule 9 (sentencia -> impresion SENTENCIAFIN .)
    INT             reduce using rule 9 (sentencia -> impresion SENTENCIAFIN .)
    FLOAT           reduce using rule 9 (sentencia -> impresion SENTENCIAFIN .)
    STRING          reduce using rule 9 (sentencia -> impresion SENTENCIAFIN .)
    BOOL            reduce using rule 9 (sentencia -> impresion SENTENCIAFIN .)
    VOID            reduce using rule 9 (sentencia -> impresion SENTENCIAFIN .)
    CHAR            reduce using rule 9 (sentencia -> impresion SENTENCIAFIN .)
    LISTA           reduce using rule 9 (sentencia -> impresion SENTENCIAFIN .)
    DICTIONARY      reduce using rule 9 (sentencia -> impresion SENTENCIAFIN .)
    $end            reduce using rule 9 (sentencia -> impresion SENTENCIAFIN .)
    DLLAVE          reduce using rule 9 (sentencia -> impresion SENTENCIAFIN .)


state 37

    (10) sentencia -> instruccion_return SENTENCIAFIN .
